--- a/addOns/postman/src/main/resources/org/zaproxy/addon/postman/resources/Messages.properties
+++ b/addOns/postman/src/main/resources/org/zaproxy/addon/postman/resources/Messages.properties
@@ -5,6 +5,9 @@ postman.cmdline.url.help = Imports a Postman definition from the specified URL.
 postman.desc = Allows you to spider and import Postman definitions
 
 postman.error.filenotfound = Cannot find the file:\n{0}
+postman.error.importfile = An error occurred while importing from file.
+postman.error.parsedefn = An error occurred while parsing the definition, please ensure that the definition is a valid json
+postman.error.invalidmethod = Method is invalid
 
 postman.importfromdialog.importbutton = Import
 postman.importfromdialog.labelendpoint = Endpoint URL
